# libcpptask

./: .gitignore  CMakeLists.txt  README.md
include/libcpptask/: CppTask_Exception.h  CppTask_ITask.h  CppTask_Task.h
src/: CppTask_Task.cpp  CppTask_ThreadPool.cpp  CppTask_ThreadPool.h
test/: CMakeLists.txt
test/src/: CppTask_Task_Tests.cpp  CppTask_ThreadPool_Tests.cpp
